[package]
name = "optargs-macro"
version = "0.1.2"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Macros for the optargs crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.6"
quote = "1.0"
syn = { version = "1.0.11", features = ["full", "extra-traits"] }


[profile.dev]
debug = 0

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
